[device] Track firmware effect state
